# Koala

./: .gitignore  BUGS  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  example.frs  stats  test.py  test.syn
.github/workflows/: ccpp.yml
doc/: quick-guide.txt
examples/: .example.frs.swo  .example.frs.swp  NodeJS.js  alphabet.frs  arguments.frs  ascii-table.frs  baseToStr.frs  class.frs  countWords.frs  drawing.frs  example.frs  example.frs_  factorial.frs  files.frs  flip.frs  for.frs  functions.frs  gameOfLife.frs  hello-world.frs  ifs.frs  nextASCII.frs  oop.frs  open std.frs  pattern.frs  pointer.frs  python.py  recursion.frs  sin.frs  std.frs  strToBase.frs
lib/std/: kllib.h  stdlib.h
res/: Logo.kra  frs.vim
src/: .compiler.c.swp  .interpreter.c.swp  .multisearcher.c.swp  .util.c.swp  CMakeLists.txt  Makefile  cmake_install.cmake  compiler.c  compiler.h  gnumber.c  gnumber.h  interpreter.c  interpreter.c_  interpreter.h  interpreter.h_  lexer.c  lexer.h  library.c  library.h  main.c  multisearcher.c  multisearcher.h  parser.c  parser.h  util.c  util.h
src/lib/std/: stdlib.h
